refactor: Rename price prediction API schemas
