# packages/api-schema/src/openAPI/models.ts
@@ -9,5 +9,5 @@ export type User = components['schemas']['User']
 export type Session = components['schemas']['Session']
 export type Asset = components['schemas']['Asset']
 export type PredictionType = components['schemas']['PredictionType']
-export type CreatePricePredictionPayload = components['schemas']['CreatePricePredictionPayload']
-export type PreviousPricePrediction = components['schemas']['PreviousPricePrediction']
+export type CreatePricePrediction = components['schemas']['CreatePricePrediction']
+export type PricePrediction = components['schemas']['PricePrediction']
