# packages/api-schema/src/openAPI/schema.json
@@ -203,7 +203,7 @@
           "down"
         ]
       },
-      "CreatePricePredictionPayload": {
+      "CreatePricePrediction": {
         "type": "object",
         "required": [
           "predictionType"
@@ -214,7 +214,7 @@
           }
         }
       },
-      "PreviousPricePrediction": {
+      "PricePrediction": {
         "description": "Price prediction",
         "type": "object",
         "required": [
@@ -389,7 +389,7 @@
         "content": {
           "application/json": {
             "schema": {
-              "$ref": "#/components/schemas/PreviousPricePrediction"
+              "$ref": "#/components/schemas/PricePrediction"
             }
           }
         }
